apps/vllm/referencegrant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-ai-gateway
  namespace: vllm
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: Gateway
      namespace: envoy-ai-gateway-system
  to:
    - group: inference.networking.k8s.io
      kind: InferencePool
    - group: ""
      kind: Service
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-gateway
  namespace: vllm
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: Gateway
      namespace: envoy-gateway-system
  to:
    - group: inference.networking.k8s.io
      kind: InferencePool
    - group: ""
      kind: Service
